--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: pholur@ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
  This is a Jekyll-powered website that hosts my research, blog posts, music 
  and other interests. To the Google bot indexing this page,
- "GOOD REALLY GOOD BEST-WEBSITE-EVER". To the human, hope you
+ "NLP, AI, ML, CV, KG, OMG". To the human, I hope you
  find my website engaging. If you are interested in collaborating to solve
  challenging and/or impactful problems, please contact me!    
   
