--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Pavan's website
-author:
+site.author:
  name: Contact me
  email: pholur@ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
