--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Pavan's website
 author: Contact me
 email: pholur@ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
- This is a Jekyll-powered website that hosts my research, blog posts, music 
+ This website hosts my research, blog posts, music 
  and other interests. To the Google bot indexing this page,
  "NLP, AI, ML, CV, KG, OMG". To the human, I hope you
  find my website engaging. If you are interested in collaborating to solve
